--- a/about.html
+++ b/about.html
@@ -54,6 +54,7 @@
     </header>
     <br>
     <br>
+
     <div class="site-section" id="about-section">
         <div class="container">
             <div class="row ">
@@ -62,10 +63,10 @@
                 </div>
                 <div class="col-lg-10">
                     <br>
-                    <h4>We are one of the emerging brands in the field of interior designing. We provide customised and end to end outcomes to our customers. Make my interiors is established by a team of experts and experienced people in the field of interior
+                    <h4>We are one of the emerging brands in the field of interior designing. We provide customised and end to end solution to our customers. Make my interiors is established by a team of experts and experienced people in the field of interior
                         designing. Honesty, work ethics, punctuality and commitment are the pillars of our foundation.</h4> <br>
                     <h4>We not only promise quality products and time commitment but also deliver these things in a good way when compared to other brands. We provide all interior related services like customised furniture, modular furniture, modular kitchen,
-                        false ceiling, civil changes work, fabrication work, electric work, paint and wallpaper, glass and door, decorative light, artefacts, curtains and all other work-related to interior designing.</h4>
+                        false ceiling, civil changes work, fabrication work, electric work, paint, wallpaper, glass, door, decorative light, artefacts, curtains and all other work-related to interior designing.</h4>
                 </div>
                 <br>
                 <br>
@@ -92,90 +93,90 @@
             </div>
         </div>
 
+        <div class="d-flex align-items-center">
+            <div class="row">
+                <div class="column">
+                    <div class="card">
+                        <img src="assets/img/team/bhushan.jpeg" alt="Bhushan" style="width:100%">
+                        <div class="container">
+                            <h2>Bhushan Dehadray</h2>
+                            <p class="title">CEO &amp; Founder</p>
+                            <p>Bhushan is a professional interior designer with great Sense of resposibility , Work ethics and integrity .He believes in providing Best quality work within timeline . He work hard to make this organisation realiable and trustworthy
+                                . He Value and respects the Hard earned Money of his Clients and deliver Best possible Interior designing Services.</p>
+                            <!-- <p>example@example.com</p>
+                    <p><button class="button">Contact</button></p> -->
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="column">
+                    <div class="card">
+                        <img src="assets\img\team\kiran.jpeg" alt="Kiran" style="width:100%">
+                        <div class="container">
+                            <h2>Kiran Methe</h2>
+                            <p class="title">Managing Director</p>
+                            <p>Being a MD, she oversees various administrative aspects of an interior design projects. She Plan the timeline, helps in determine the budget and successfully complete the projects.</p>
+                            <!-- <p>example@example.com</p>
+                    <p><button class="button">Contact</button></p> -->
+                        </div>
+                    </div>
+                </div>
 
-        <div class="row">
-            <div class="column">
-                <div class="card">
-                    <img src="assets/img/team/bhushan.jpeg" alt="Bhushan" style="width:100%">
-                    <div class="container">
-                        <h2>Bhushan Dehadray</h2>
-                        <p class="title">CEO &amp; Founder</p>
-                        <p>Bhushan is a professional interior designer with great Sense of resposibility , Work ethics and integrity .He believes in providing Best quality work within timeline . He work hard to make this organisation realiable and trustworthy
-                            . He Value and respects the Hard earned Money of his Clients and deliver Best possible Interior designing Services.</p>
-                        <!-- <p>example@example.com</p>
+                <div class="column">
+                    <div class="card">
+                        <img src="assets/img/team/alifiya.jpeg" alt="alifiya" style="width:100%">
+                        <div class="container">
+                            <h2>Alifiya Magar</h2>
+                            <p class="title">Senior Interior Designer</p>
+                            <p>She is innovative interior designer with year's of experience in project management, space planning & computer aided design. She lead designing part for Make My Interior.</p>
+                            <!-- <p>example@example.com</p>
                     <p><button class="button">Contact</button></p> -->
+                        </div>
                     </div>
                 </div>
-            </div>
-            <br>
-            <div class="column">
-                <div class="card">
-                    <img src="assets\img\team\kiran.jpeg" alt="Kiran" style="width:100%">
-                    <div class="container">
-                        <h2>Kiran Methe</h2>
-                        <p class="title">Managing Director</p>
-                        <p>Being a MD, she oversees various administrative aspects of an interior design projects. She Plan the timeline, helps in determine the budget and successfully complete the projects.</p>
-                        <!-- <p>example@example.com</p>
+                <div class="column">
+                    <div class="card">
+                        <img src="assets/img/team/hozefa.jpeg" alt="hozefa" style="width:100%">
+                        <div class="container">
+                            <h2>Hozefa Ajna</h2>
+                            <p class="title">Interior Designer</p>
+                            <p>He specialize in making things appealing to the eyes. His designs are based on accurate requirement.He plan the design of living and commercial environments including structural alterations, furnishing, fixtures, lighting and
+                                color schemes.
+                            </p>
+                            <!-- <p>example@example.com</p>
                     <p><button class="button">Contact</button></p> -->
+                        </div>
                     </div>
                 </div>
-            </div>
-
-            <div class="column">
-                <div class="card">
-                    <img src="assets/img/team/alifiya.jpeg" alt="alifiya" style="width:100%">
-                    <div class="container">
-                        <h2>Alifiya Magar</h2>
-                        <p class="title">Senior Interior Designer</p>
-                        <p>She is innovative interior designer with year's of experience in project management, space planning & computer aided design. She lead designing part for Make My Interior.</p>
-                        <!-- <p>example@example.com</p>
-                    <p><button class="button">Contact</button></p> -->
-                    </div>
-                </div>
-            </div>
-            <div class="column">
-                <div class="card">
-                    <img src="assets/img/team/hozefa.jpeg" alt="hozefa" style="width:100%">
-                    <div class="container">
-                        <h2>Hozefa Ajna</h2>
-                        <p class="title">Interior Designer</p>
-                        <p>He specialize in making things appealing to the eyes. His designs are based on accurate requirement.He plan the design of living and commercial environments including structural alterations, furnishing, fixtures, lighting and color
-                            schemes.
-                        </p>
-                        <!-- <p>example@example.com</p>
-                    <p><button class="button">Contact</button></p> -->
-                    </div>
-                </div>
-            </div>
 
 
-            <div class="column">
-                <div class="card">
-                    <img src="assets/img/team/khushi.jpeg" alt="khushi" style="width:100%">
-                    <div class="container">
-                        <h2>Khushi Pokharna</h2>
-                        <p class="title">Junior Interior Designer</p>
-                        <p>She is a young, vibrant & creative designer who believe in beautiful interiors to transform daily life. She look after design & execution parallelly.</p>
-                        <!-- <p>example@example.com</p>
+                <div class="column">
+                    <div class="card">
+                        <img src="assets/img/team/khushi.jpeg" alt="khushi" style="width:100%">
+                        <div class="container">
+                            <h2>Khushi Pokharna</h2>
+                            <p class="title">Junior Interior Designer</p>
+                            <p>She is a young, vibrant & creative designer who believe in beautiful interiors to transform daily life. She look after design & execution parallelly.</p>
+                            <!-- <p>example@example.com</p>
                     <p><button class="button">Contact</button></p> -->
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="column">
-                <div class="card">
-                    <img src="assets\img\team\shraddha.jpeg" alt="shraddha" style="width:100%">
-                    <div class="container">
-                        <h2>Shraddha Patil</h2>
-                        <p class="title">Interior Designer</p>
-                        <p>She create interior designs for professional workplaces in a variety of settings, from small offices to large buildings. She focus on creating spaces that are efficient, functional, and safe for employees. In their designs, they
-                            may incorporate elements of a company’s brand</p>
-                        <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
-                        <!-- <p>example@example.com</p>
+                <div class="column">
+                    <div class="card">
+                        <img src="assets\img\team\shraddha.jpeg" alt="shraddha" style="width:100%">
+                        <div class="container">
+                            <h2>Shraddha Patil</h2>
+                            <p class="title">Interior Designer</p>
+                            <p>She create interior designs for professional workplaces in a variety of settings, from small offices to large buildings. She focus on creating spaces that are efficient, functional, and safe for employees. In their designs,
+                                they may incorporate elements of a company’s brand</p>
+                            <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
+                            <!-- <p>example@example.com</p>
                     <p><button class="button">Contact</button></p> -->
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- <div class="column">
+                <!-- <div class="column">
                     <div class="card">
                         <img src="img3.jpg" alt="aditya" style="width:100%">
                         <div class="container">
@@ -187,21 +188,21 @@
                         </div>
                     </div>
                 </div> -->
-            <div class="column">
-                <div class="card">
-                    <img src="assets\img\team\rahul.jpeg" alt="Rahul" style="width:100%">
-                    <div class="container">
-                        <h2>Rahul Bansal</h2>
-                        <p class="title">Interior Designer</p>
-                        <p>He work closely with architects, civil engineers, mechanical engineers, and construction laborers and helpers to determine how interior spaces will function, look, and be furnished. He read blueprints and he is aware of building
-                            codes and inspection regulations.</p>
-                        <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
-                        <!-- <p>example@example.com</p> -->
-                        <!-- <p><button class="button">Contact</button></p> -->
+                <div class="column">
+                    <div class="card">
+                        <img src="assets\img\team\rahul.jpeg" alt="Rahul" style="width:100%">
+                        <div class="container">
+                            <h2>Rahul Bansal</h2>
+                            <p class="title">Interior Designer</p>
+                            <p>He work closely with Carpenters, Painters and other laborers so that work will be done accurately and within time. He is expert in supervision</p>
+                            <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
+                            <!-- <p>example@example.com</p> -->
+                            <!-- <p><button class="button">Contact</button></p> -->
+                        </div>
                     </div>
                 </div>
-            </div>
 
+            </div>
         </div>
 
         <footer>
@@ -210,28 +211,31 @@
                     <div class="container">
                         <div class="d-flex justify-content-center">
                             <div class="col-xl-4 col-lg-5 col-md-4 col-sm-6">
-                                <div class="single-footer-caption mb-50">
+                                <div class="single-footer-caption mb-500">
                                     <div class="single-footer-caption mb-30">
-                                        <div class="footer-logo mb-25">
-                                            <a href="https://makemyinteriors.in/"><img src="assets/img/logo/asset1.png" width="260" height="65" alt=" Make my Interiors logo" data-pagespeed-url-hash="1320415278" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                                            </a>
-                                            </a>
-                                        </div>
-                                        <div class="footer-tittle">
-                                            <div class="footer-pera">
-                                                <p>
-                                                    <h6>Architecture is really about well-being. I think that people want to feel good in a space.
-                                                    </h6>
-                                                </p>
+                                        <div class="footlogo">
+                                            <div class="footer-logo mb-25">
+                                                <a href="https://makemyinteriors.in/"><img src="assets/img/logo/asset1.png" width="400" height="110" alt=" Make my Interiors logo">
+                                                </a>
+                                                </a>
                                             </div>
                                         </div>
-
-                                        <div class="footer-social">
-                                            <a href="https://www.facebook.com/MakeMyInteriorsPune"><i class="fab fa-facebook-f"></i></a>
-                                            <a href="https://www.instagram.com/makemyinteriors/"><i class="fa-brands fa-instagram"></i></a>
-                                            <a href="https://www.youtube.com/channel/UCgOA8Ws1KRb2mi1Hk10DUQw"><i class="fab fa-youtube"></i></a>
-                                            <a href="https://www.google.com/maps/place/Make+My+Interiors+Pvt.+Ltd/@18.4532454,73.8911507,15z/data=!4m5!3m4!1s0x0:0xbba9c06a02d7a138!8m2!3d18.4532454!4d73.8911507"><i class="fa-brands fa-google"></i></a>
-
+                                        <div class="footpera">
+                                            <div class="footer-tittle">
+                                                <div class="footer-pera">
+                                                    <p>
+                                                        <h6>Architecture is really about well-being. I think that people want to feel good in a space.</h6>
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="d-flex justify-content-center">
+                                            <div class="footer-social">
+                                                <a href="https://www.facebook.com/MakeMyInteriorsPune"><i class="fab fa-facebook-f"></i></a>
+                                                <a href="https://www.instagram.com/makemyinteriors/"><i class="fa-brands fa-instagram"></i></a>
+                                                <a href="https://www.youtube.com/channel/UCgOA8Ws1KRb2mi1Hk10DUQw"><i class="fab fa-youtube"></i></a>
+                                                <a href="https://www.google.com/maps/place/Make+My+Interiors+Pvt.+Ltd/@18.4532454,73.8911507,15z/data=!4m5!3m4!1s0x0:0xbba9c06a02d7a138!8m2!3d18.4532454!4d73.8911507"><i class="fa-brands fa-google"></i></a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
