--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
                     <div class="slider-cap-wrapper ">
                         <div class="hero-caption ">
                             <h1 data-animation="fadeInUp " data-delay=".2s ">Lets Make your Interior Better</h1>
-                            <p data-animation="fadeInUp " data-delay=".6s ">Interior work is not just a physical apperance, It contains emotions, efforts and choices. People bring their hard earned money and we provide them best possible interior designing solutions. We not only focus on building bussiness
-                                but also maintaining relationships.</p>
+                            <p data-animation="fadeInUp " data-delay=".6s ">Interior work is not just a physical appearance, It contains emotions, efforts and choices. People bring their hard earned money and we provide them best possible interior designing solutions. We not only focus on building
+                                bussiness but also maintaining relationships.</p>
 
                         </div>
                         <div class="hero-img position-relative ">
@@ -591,27 +591,26 @@
                             <div class="col-lg-12">
 
                                 <div class="single-location">
-                                    <img data-cfsrc="assets/img/gallery/room_design1.jpg" alt="" data-pagespeed-url-hash="1570503467" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" style="display:none;visibility:hidden;"><noscript><img
-                                        src="assets/img/gallery/room_design1.jpg" alt=""
+                                    <img data-cfsrc="assets/img/gallery/workslide/2.png" alt="" data-pagespeed-url-hash="1570503467" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" style="display:none;visibility:hidden;"><noscript><img
+                                        src="assets/img/gallery/workslide/2.png" alt=""
                                         data-pagespeed-url-hash="1570503467"
                                         onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></noscript>
                                     <div class="location-contents">
-                                        <h3><a href="#" class="location-btn">Residential design </a></h3>
-                                        <p>Even the all-powerful Pointing has no control<br> about the blind texts it is an almost.
-                                        </p>
+                                        <h3><a href="https://makemyinteriors.in/work" class="location-btn">Commercial Interior Design </a></h3>
+                                        <pHere, we focuses more the space breathe and functionality on making professionalism and functionality. </p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-12">
 
                                 <div class="single-location">
-                                    <img data-cfsrc="assets/img/gallery/room_design2.jpg" alt="" data-pagespeed-url-hash="1865003388" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" style="display:none;visibility:hidden;"><noscript><img
-                                        src="assets/img/gallery/room_design2.jpg" alt=""
+                                    <img data-cfsrc="assets/img/gallery/workslide/5.png" alt="" data-pagespeed-url-hash="1865003388" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" style="display:none;visibility:hidden;"><noscript><img
+                                        src="assets/img/gallery/workslide/5.png" alt=""
                                         data-pagespeed-url-hash="1865003388"
                                         onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></noscript>
                                     <div class="location-contents">
-                                        <h3><a href="#" class="location-btn">Residential design </a></h3>
-                                        <p>Even the all-powerful Pointing has no control <br>about the blind texts it is an almost.
+                                        <h3><a href="https://makemyinteriors.in/work" class="location-btn">Residential Interior Design </a></h3>
+                                        <p>Space management, budget management and asthetic feel are our core principles while making your home. We design your dreams.
                                         </p>
                                     </div>
                                 </div>
@@ -619,13 +618,13 @@
                             <div class="col-lg-12">
 
                                 <div class="single-location">
-                                    <img data-cfsrc="assets/img/gallery/room_design3.jpg" alt="" data-pagespeed-url-hash="2159503309" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" style="display:none;visibility:hidden;"><noscript><img
-                                        src="assets/img/gallery/room_design3.jpg" alt=""
+                                    <img data-cfsrc="assets/img/gallery/workslide/3.png" alt="" data-pagespeed-url-hash="2159503309" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" style="display:none;visibility:hidden;"><noscript><img
+                                        src="assets/img/gallery/workslide/3.png" alt=""
                                         data-pagespeed-url-hash="2159503309"
                                         onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></noscript>
                                     <div class="location-contents">
-                                        <h3><a href="#" class="location-btn">Residential design </a></h3>
-                                        <p>Even the all-powerful Pointing has no control <br>about the blind texts it is an almost.
+                                        <h3><a href="https://makemyinteriors.in/work" class="location-btn"> Modular kitchen </a></h3>
+                                        <p>Every day start with the kitchen, and kitchen designing is soul of interior work . We design your kitchen with perfection and provide you with an attractive, affordable and safe one.
                                         </p>
                                     </div>
                                 </div>
@@ -633,13 +632,41 @@
                             <div class="col-lg-12">
 
                                 <div class="single-location">
-                                    <img data-cfsrc="assets/img/gallery/room_design1.jpg" alt="" data-pagespeed-url-hash="1570503467" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" style="display:none;visibility:hidden;"><noscript><img
-                                        src="assets/img/gallery/room_design1.jpg" alt=""
+                                    <img data-cfsrc="assets/img/gallery/workslide/1.png" alt="" data-pagespeed-url-hash="2159503309" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" style="display:none;visibility:hidden;"><noscript><img
+                                        src="assets/img/gallery/workslide/1.png" alt=""
+                                        data-pagespeed-url-hash="2159503309"
+                                        onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></noscript>
+                                    <div class="location-contents">
+                                        <h3><a href="https://makemyinteriors.in/work" class="location-btn"> Commercial Interior Design </a></h3>
+                                        <p>Here, we focuses more the space breathe and functionality on making professionalism and functionality.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+
+                                <div class="single-location">
+                                    <img data-cfsrc="assets/img/gallery/workslide/6.png" alt="" data-pagespeed-url-hash="2159503309" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" style="display:none;visibility:hidden;"><noscript><img
+                                        src="assets/img/gallery/workslide/6.png" alt=""
+                                        data-pagespeed-url-hash="2159503309"
+                                        onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></noscript>
+                                    <div class="location-contents">
+                                        <h3><a href="https://makemyinteriors.in/work" class="location-btn"> Residential Interior Design </a></h3>
+                                        <p>Space management, budget management and asthetic feel are our core principles while making your home. We design your dreams.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+
+                                <div class="single-location">
+                                    <img data-cfsrc="assets/img/gallery/workslide/4.png" alt="" data-pagespeed-url-hash="1570503467" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" style="display:none;visibility:hidden;"><noscript><img
+                                        src="assets/img/gallery/workslide/4.png" alt=""
                                         data-pagespeed-url-hash="1570503467"
                                         onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></noscript>
                                     <div class="location-contents">
-                                        <h3><a href="#" class="location-btn">Residential design </a></h3>
-                                        <p>Even the all-powerful Pointing has no control<br> about the blind texts it is an almost.
+                                        <h3><a href="https://makemyinteriors.in/work" class="location-btn">Modular Kitchen </a></h3>
+                                        <p>Every day start with the kitchen, and kitchen designing is soul of interior work . We design your kitchen with perfection and provide you with an attractive, affordable and safe one.
                                         </p>
                                     </div>
                                 </div>
@@ -688,26 +715,31 @@
                 <div class="container">
                     <div class="d-flex justify-content-center">
                         <div class="col-xl-4 col-lg-5 col-md-4 col-sm-6">
-                            <div class="single-footer-caption mb-50">
+                            <div class="single-footer-caption mb-500">
                                 <div class="single-footer-caption mb-30">
-                                    <div class="footer-logo mb-25">
-                                        <a href="https://makemyinteriors.in/"><img src="assets/img/logo/asset1.png" width="260" height="65" alt=" Make my Interiors logo" data-pagespeed-url-hash="1320415278" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                                        </a>
-                                        </a>
-                                    </div>
-                                    <div class="footer-tittle">
-                                        <div class="footer-pera">
-                                            <p>
-                                                <h6>Architecture is really about well-being. I think that people want to feel good in a space.</h6>
-                                            </p>
+                                    <div class="footlogo">
+                                        <div class="footer-logo mb-25">
+                                            <a href="https://makemyinteriors.in/"><img src="assets/img/logo/asset1.png" width="400" height="110" alt=" Make my Interiors logo">
+                                            </a>
+                                            </a>
                                         </div>
                                     </div>
-
-                                    <div class="footer-social">
-                                        <a href="https://www.facebook.com/MakeMyInteriorsPune"><i class="fab fa-facebook-f"></i></a>
-                                        <a href="https://www.instagram.com/makemyinteriors/"><i class="fa-brands fa-instagram"></i></a>
-                                        <a href="https://www.youtube.com/channel/UCgOA8Ws1KRb2mi1Hk10DUQw"><i class="fab fa-youtube"></i></a>
-                                        <a href="https://www.google.com/maps/place/Make+My+Interiors+Pvt.+Ltd/@18.4532454,73.8911507,15z/data=!4m5!3m4!1s0x0:0xbba9c06a02d7a138!8m2!3d18.4532454!4d73.8911507"><i class="fa-brands fa-google"></i></a>
+                                    <div class="footpera">
+                                        <div class="footer-tittle">
+                                            <div class="footer-pera">
+                                                <p>
+                                                    <h6>Architecture is really about well-being. I think that people want to feel good in a space.</h6>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="d-flex justify-content-center">
+                                        <div class="footer-social">
+                                            <a href="https://www.facebook.com/MakeMyInteriorsPune"><i class="fab fa-facebook-f"></i></a>
+                                            <a href="https://www.instagram.com/makemyinteriors/"><i class="fa-brands fa-instagram"></i></a>
+                                            <a href="https://www.youtube.com/channel/UCgOA8Ws1KRb2mi1Hk10DUQw"><i class="fab fa-youtube"></i></a>
+                                            <a href="https://www.google.com/maps/place/Make+My+Interiors+Pvt.+Ltd/@18.4532454,73.8911507,15z/data=!4m5!3m4!1s0x0:0xbba9c06a02d7a138!8m2!3d18.4532454!4d73.8911507"><i class="fa-brands fa-google"></i></a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
