--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                             <div class="logo mr-45">
                                 <a href="https://makemyinteriors.in/">
 
-                                    <img src="assets/img/logo/asset1.png " width="260 " height="65 " alt=" " data-pagespeed-url-hash="1320415278 " onload="pagespeed.CriticalImages.checkImageForCriticality(this); ">
+                                    <img src="assets/img/logo/asset1.png " width="260 " height="auto " alt=" " data-pagespeed-url-hash="1320415278 " onload="pagespeed.CriticalImages.checkImageForCriticality(this); ">
                                 </a>
                             </div>
 
@@ -215,7 +215,7 @@
                                     <div class="single-footer-caption mb-30">
                                         <div class="footlogo">
                                             <div class="footer-logo mb-25">
-                                                <a href="https://makemyinteriors.in/"><img src="assets/img/logo/asset1.png" width="400" height="110" alt=" Make my Interiors logo">
+                                                <a href="https://makemyinteriors.in/"><img src="assets/img/logo/asset1.png" width="320" height="auto" alt=" Make my Interiors logo">
                                                 </a>
                                                 </a>
                                             </div>
